27_matrix_input/grade.txt
Grading at Thu Jul 16 02:24:40 UTC 2020
Attempting to compile rotateMatrix.c
rotateMatrix.c: In function ‘main’:
rotateMatrix.c:35:10: error: invalid operands to binary == (have ‘FILE {aka struct _IO_FILE}’ and ‘void *’)
   if (*f == NULL) {
          ^
The code did not compile!

Overall Grade: F
